# ormolu

./: CHANGELOG.md  blog-example.hsig  cabal.project  default.nix  format.sh  ormolu.cabal
.buildkite/: pipeline.yml
.github/workflows/: binaries.yml  ormolu-live.yml
app/: Main.hs
data/examples/declaration/value/function/infix/: do-out.hs
data/examples/declaration/value/function/record/: dot-singleline-out.hs  dot-singleline.hs
nix/: sources.json
ormolu-live/: .gitignore  OrmoluLive.hs  README.md  build.sh  default.nix  ormolu-live.cabal  package-lock.json  package.json  packages.dhall  spago.dhall
ormolu-live/assets/: index-dev.html  index.html  index.js
ormolu-live/src/: Main.hs  Main.js  Main.purs
ormolu-live/src/Language/Javascript/JSaddle/Warp/: Extra.hs
ormolu-live/wasm/: OrmoluLive.hs  build.sh
ormolu-live/www/: style.css
src/: Ormolu.hs
src/Ormolu/: Config.hs  Imports.hs  Parser.hs  Printer.hs  Utils.hs
src/Ormolu/Diff/: ParseResult.hs
src/Ormolu/Parser/: CommentStream.hs  Result.hs
src/Ormolu/Printer/: Combinators.hs  Comments.hs  Internal.hs  Operators.hs
src/Ormolu/Printer/Meat/: Backpack.hs  Common.hs  Declaration.hs  ImportExport.hs  Module.hs  Type.hs
src/Ormolu/Printer/Meat/Declaration/: Class.hs  Data.hs  Foreign.hs  Instance.hs  RoleAnnotation.hs  Rule.hs  Signature.hs  TypeFamily.hs  Value.hs
