cabal-version: 2.4
name: ormolu-live
version: 0.0.0.0
author: amesgen
maintainer: amesgen@amesgen.de

executable ormolu-live
  ghc-options: -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -fno-warn-name-shadowing -Wmissing-deriving-strategies -Wunused-packages
  ghcjs-options: -dedupe
  default-extensions: BlockArguments CPP DeriveGeneric DerivingStrategies LambdaCase NamedFieldPuns OverloadedLabels OverloadedStrings RecordWildCards StandaloneDeriving TypeApplications ViewPatterns
  main-is: Main.hs
  build-depends:
      base
    , relude >= 1
    , unliftio >= 0.2
    , ormolu
    , ghc-lib-parser
    , ghc-syntax-highlighter
    , miso == 1.7.1.0
    , lens >= 5.0
    , generic-lens >= 2.2
  if !impl(ghcjs)
    build-depends:
        jsaddle >= 0.9.8
      , jsaddle-warp >= 0.9
      , websockets >= 0.12.7
      , warp >= 3.3.17
      , wai-app-static >= 3.1.7
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  hs-source-dirs: src
  other-modules:
    Language.Javascript.JSaddle.Warp.Extra
  default-language: Haskell2010
